# watchlists

./: .allowed-lints-baseline.txt  .env  .tmuxinator.yml  CLAUDE.md  Cargo.toml  flake.nix  justfile
.claude/: settings.local.json
.github/workflows/: lint.yml  test.yml
examples/: generate_fixtures.rs
src/: binance.rs  main.rs  utils.rs  woo.rs
src/exchanges/: binance.rs  coingecko.rs  earningshub.rs  ibkr.rs  kucoin.rs  mod.rs  stockanalysis.rs  woo.rs
tests/: test_helpers.rs
tests/fixtures/: README.md  coingecko_response.json  earningshub_this_week.html  kucoin_response.json  stockanalysis_spy.html  woo_response.json
