[package]
name = "watchlist"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.5"
ibapi = "1.2.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
scraper = "0.23.1"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
