[package]
name = "watchlist"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
ibapi = "2.0.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.23.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.5"
insta = "1.43"
