[package]
name = "watchlist"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
ibapi = "2.0.0"
playwright = "0.0.20"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
insta = "1.43"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
print_stdout = "warn"
dbg_macro = "warn"
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
match_same_arms = "allow"
trivially_copy_pass_by_ref = "allow"
semicolon_if_nothing_returned = "allow"
case_sensitive_file_extension_comparisons = "allow"
get_first = "allow"
option_if_let_else = "allow"
